# back-domain/src/main/java/com/feyconsuelo/domain/model/role/RoleResponse.java
@@ -1,0 +1,14 @@
+package com.feyconsuelo.domain.model.role;
+
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+public class RoleResponse {
+
+    private String role;
+
+    private String roleName;
+
+}
